# OneWeekApps

./: .gitignore  COLLABORATING.md  Collaborating.md  LICENSE  OneWeekApps.cabal  README.md  STYLE_GUIDE.md  circle.yml  owa.hs  stack.yaml
owa-core/: owa-core.cabal  package.yaml
owa-core/src/exe/: RunOWA.hs
owa-core/src/lib/: OWAFileNames.hs  OWAMain.hs  OWANew.hs  OWAObjcPrint.hs  OWASwiftPrint.hs  OWATerminal.hs
owa-core/src/lib/Core/: FileNames.hs  FileSearch.hs  Lazy.hs  Main.hs  New.hs  Terminal.hs  Types.hs  XCode.hs
owa-core/src/lib/ObjcConverters/: OWAAlertObjc.hs  OWAColorObjc.hs  OWAErrorObjc.hs  OWAFontObjc.hs  OWAObjcUtil.hs  OWAStringsObjc.hs  OWAViewObjc.hs
owa-core/src/lib/Parsers/: OWAAlertParser.hs  OWAAppInfoParser.hs  OWAColorParser.hs  OWAErrorParser.hs  OWAFontParser.hs  OWAParseUtil.hs  OWAStringsParser.hs  OWAViewParser.hs
owa-core/src/lib/SwiftConverters/: OWAAlertSwift.hs  OWAColorSwift.hs  OWAErrorSwift.hs  OWAFontSwift.hs  OWASwiftUtil.hs  OWAViewSwift.hs
owa-core/src/lib/XCode/: OWAXCode.hs
owa-core/src/lib/XCode/XCodeTemplates/: ProjectFileTemplate.hs
owa-core/src/lib/dataTypes/: OWAColor.hs  OWAFont.hs
owa-core/test/Core/: Tests.hs
owa-core/test/Core/Tests/: Utils.hs
owa-core/test/Core/Tests/AppInfoCLI/: Basic.hs
owa-core/test/Core/Tests/CodeType/: Basic.hs
owa-core/test/Core/Tests/FileSearch/: AppDirectory.hs  AppInfo.hs  Models.hs  SourceFiles.hs  Strings.hs  Views.hs
owa-core/test/Core/Tests/Integration/: Utils.hs
owa-core/test/Core/Tests/LazyGeneration/: Basic.hs
owa-core/test/Core/Tests/XCode/: Basic.hs
owa-core/tests/: IntegrationTestUtil.hs  TestUtil.hs
owa-core/tests/Version010Tests/: AppDirectoryTests.hs  FileSearchTests.hs  OWAVersion010Tests.hs
owa-core/tests/Version010Tests/AlertTests/: AlertParseTests.hs  AlertPrintTests.hs  TestAlerts.hs
owa-core/tests/Version010Tests/ColorTests/: ColorParseTests.hs  ColorPrintTests.hs  TestColors.hs
owa-core/tests/Version010Tests/ColorTests/ColorParseFiles/: mixFormatTests.colors  rgbaTests.colors
owa-core/tests/Version010Tests/ErrorTests/: ErrorParseTests.hs  ErrorPrintTests.hs  TestErrors.hs
owa-core/tests/Version010Tests/FontTests/: FontParseTests.hs  FontPrintTests.hs  TestFonts.hs
owa-core/tests/Version010Tests/FontTests/FontOutputFiles/: UIFont+EmptyCategory.m.test  UIFont+MyAppFonts.m.test
owa-core/tests/Version015Tests/: OWAVersion015Tests.hs
owa-core/tests/Version015Tests/AlertParseFailureTests/: AlertParseFailureTests.hs
owa-core/tests/Version015Tests/AlertParseFailureTests/ParseFiles/: badAttributeFailure2.alerts  badLocalizedKeyFailure1.alerts
owa-core/tests/Version015Tests/AppInfo/: AppInfoSearch.hs
owa-core/tests/Version015Tests/ColorParseFailureTests/: ColorParseFailureTests.hs
owa-core/tests/Version015Tests/ColorParseFailureTests/ParseFiles/: hex2Failure.colors  newLineEndFailure.colors
owa-core/tests/Version015Tests/CommentTests/: CommentTests.hs
owa-core/tests/Version015Tests/CommentTests/CommentParseFiles/: comments.alerts
owa-core/tests/Version015Tests/DefaultsFileTests/: DefaultsFileTests.hs  TestAppInfo.hs  TestDefaultErrors.hs
owa-core/tests/Version015Tests/DefaultsFileTests/ParseFiles/: defaultFailTest2.info  defaultFailTest4.info  defaultPassTest4.info
owa-core/tests/Version015Tests/ErrorParseFailureTests/: ErrorParseFailureTests.hs
owa-core/tests/Version015Tests/ErrorParseFailureTests/ParseFiles/: badAttributeFailure4.errors  badDescriptionValueFailure.errors  errorKeywordFailure3.errors  errorNameFailure2.errors
owa-core/tests/Version015Tests/FontParseFailureTests/: FontParseFailureTests.hs
owa-core/tests/Version015Tests/FontParseFailureTests/ParseFiles/: fontKeywordFailure2.fonts
owa-core/tests/Version015Tests/IntegrationTests/: Version015IntegrationTests.hs
owa-core/tests/Version015Tests/IntegrationTests/app/: app.info
owa-core/tests/Version015Tests/ItemFailureTests/: ItemFailureTests.hs  TestParseErrors.hs
owa-core/tests/Version015Tests/ItemFailureTests/ItemFailureParseFiles/: alertFailures.alerts
owa-core/tests/Version015Tests/SpacingIndentTests/: SpacingIndentTests.hs  TestSpacingIndentErrors.hs
owa-core/tests/Version015Tests/SpacingIndentTests/ParseFiles/: changingIndentColors.colors  emptyIndentAlerts.alerts  emptyIndentColors.colors  emptyIndentErrors1.errors  emptyIndentErrors2.errors  spacedErrors.errors  spacedFonts.fonts
owa-core/tests/Version015Tests/StringsTests/: StringsParseTests.hs  StringsPrintTests.hs  StringsSearchTests.hs  TestStringErrors.hs  TestStringSets.hs
owa-core/tests/Version015Tests/TabTests/: TabTests.hs
owa-core/tests/Version015Tests/TabTests/TabParseFiles/: combinationTabTest.errors
owa-core/tests/Version020Tests/: OWAVersion020Tests.hs
owa-core/tests/Version020Tests/ErrorTests/: TestErrors.hs  ViewItemErrorTests.hs  ViewParseErrorTests.hs
owa-core/tests/Version020Tests/ErrorTests/ParseFiles/: emptyAboveTag.view  invalidViewTag.view  noIndentLayout.view  noViewToRight.view  placeholderLabelFail.view  (+1 more)
owa-core/tests/Version020Tests/FileSearchTests/: ViewFileSearchTests.hs
owa-core/tests/Version020Tests/ViewTests/: TestViews.hs  ViewConstraintTests.hs  ViewElementTests.hs  ViewNameTests.hs  ViewPrintTests.hs
owa-core/tests/Version021Tests/: OWAVersion021Tests.hs
owa-core/tests/Version021Tests/ContainerViewTests/: ContainerViewTests.hs  TestContainerViews.hs
owa-core/tests/Version021Tests/CustomViewTests/: CustomViewTests.hs  TestCustomViews.hs
owa-core/tests/Version021Tests/ErrorTests/: TestErrors.hs  ViewErrorTests.hs
owa-core/tests/Version021Tests/ImageBackgroundTests/: ImageButtonTests.hs  TestButtonObjects.hs
owa-core/tests/Version023Tests/: OWAVersion023Tests.hs
owa-core/tests/Version023Tests/AppInfoCLITests/: AppInfoCLITests.hs
owa-core/tests/Version023Tests/CodeTypeTests/: CodeTypeTests.hs
owa-core/tests/Version023Tests/IntegrationTests/: Version023IntegrationTests.hs
owa-core/tests/Version023Tests/LazyCodeTests/: LazyCodeGenerationTests.hs
owa-core/tests/Version023Tests/XCodeTests/: XCodeTests.hs
src/: OWALazy.hs  (+20 more)
(+857 files in other folders)
