name:                OneWeekApps
version:             0.2.3
synopsis:            Haskell platform for rapidly developing mobile apps
-- description:         
license:             MIT
license-file:        LICENSE
author:              James Bowen
maintainer:          jhbowen047@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base,
                       directory >= 1.2.5,
                       split,
                       parsec,
                       containers,
                       wl-pprint >= 1.2,
                       mtl,
                       text,
                       time
  exposed-modules:     OWALib,
                       OWAFileSearch,
                       OWAColor,
                       OWAColorParser,
                       OWAColorObjc,
                       OWAColorSwift,
                       OWAFont,
                       OWAFontParser,
                       OWAFontObjc,
                       OWAFontSwift,
                       OWAAlert,
                       OWAAlertParser,
                       OWAAlertObjc,
                       OWAError,
                       OWAErrorParser,
                       OWAErrorObjc,
                       OWAAppInfo,
                       OWAAppInfoParser,
                       OWALocalizedStringSet,
                       OWAStringsParser,
                       OWAStringsObjc,
                       OWAParseError,
                       OWAView,
                       OWAViewParser,
                       OWAViewObjc,
                       OWAElements,
                       OWAObjcAbSyn,
                       OWAObjcPrint,
                       OWASwiftAbSyn,
                       OWASwiftPrint
  other-modules:       OWAParseUtil,
                       OWAObjcUtil,
                       OWASwiftUtil,
                       OWAPrintUtil
  hs-source-dirs:      src,
                       src/Parsers,
                       src/ObjcConverters,
                       src/SwiftConverters,
                       src/dataTypes
  default-language: Haskell2010

executable owa
  main-is:             owa.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base,
                       directory >= 1.2.5,
                       split,
                       parsec,
                       containers,
                       wl-pprint >= 1.2,
                       mtl,
                       time,
                       OneWeekApps
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite Version010Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion010Tests.hs
  hs-source-dirs:   tests,
                    tests/Version010Tests,
                    tests/Version010Tests/ColorTests,
                    tests/Version010Tests/FontTests,
                    tests/Version010Tests/AlertTests,
                    tests/Version010Tests/ErrorTests,
                    tests/Version010Tests/IntegrationTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 process,
                 parsec,
                 OneWeekApps
  default-language: Haskell2010

test-suite Version015Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion015Tests.hs
  hs-source-dirs:   tests,
                    tests/Version015Tests,
                    tests/Version015Tests/CommentTests,
                    tests/Version015Tests/TabTests,
                    tests/Version015Tests/ItemFailureTests,
                    tests/Version015Tests/ColorParseFailureTests,
                    tests/Version015Tests/FontParseFailureTests,
                    tests/Version015Tests/AlertParseFailureTests,
                    tests/Version015Tests/ErrorParseFailureTests,
                    tests/Version015Tests/SpacingIndentTests,
                    tests/Version015Tests/DefaultsFileTests,
                    tests/Version015Tests/StringsTests,
                    tests/Version015Tests/IntegrationTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 process,
                 parsec,
                 containers,
                 OneWeekApps
  default-language: Haskell2010

test-suite Version020Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion020Tests.hs
  hs-source-dirs: tests,
                  tests/Version020Tests,
                  tests/Version020Tests/FileSearchTests,
                  tests/Version020Tests/ViewTests,
                  tests/Version020Tests/ErrorTests,
                  tests/Version020Tests/IntegrationTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 process,
                 parsec,
                 containers,
                 OneWeekApps
  default-language: Haskell2010

test-suite Version021Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion021Tests.hs
  hs-source-dirs: tests,
                  tests/Version021Tests,
                  tests/Version021Tests/CustomViewTests,
                  tests/Version021Tests/ContainerViewTests,
                  tests/Version021Tests/ErrorTests,
                  tests/Version021Tests/ImageBackgroundTests,
                  tests/Version021Tests/IntegrationTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 process,
                 parsec,
                 containers,
                 OneWeekApps
  default-language: Haskell2010

test-suite Version023Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion023Tests.hs
  hs-source-dirs: tests,
                  tests/Version023Tests,
                  tests/Version023Tests/LazyCodeTests,
                  tests/Version023Tests/SwiftTests/SwiftColorTests,
                  tests/Version023Tests/SwiftTests/SwiftFontTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 containers,
                 time,
                 parsec,
                 process,
                 mtl,
                 unix,
                 OneWeekApps
  default-language: Haskell2010
