name:                owa-core
version:             0.2.3
synopsis:            Haskell platform for rapidly developing mobile apps
-- description:         
license:             MIT
license-file:        LICENSE
author:              James Bowen
maintainer:          jhbowen047@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base,
                       directory >= 1.2.5,
                       split,
                       parsec,
                       containers,
                       wl-pprint >= 1.2,
                       mtl,
                       text,
                       time,
                       transformers,
                       template,
                       owa-model,
                       owa-utils,
                       owa-parse,
                       owa-objc,
                       owa-swift
  exposed-modules:     Core.Main,
                       Core.FileSearch,
                       Core.Lazy,
                       Core.XCode
  other-modules:       Core.Types, 
                       Core.FileNames,
                       Core.New,
                       Core.Terminal,
                       Core.XCode.Templates.Other
                       Core.XCode.Templates.ProjectFile
  hs-source-dirs:      src/lib
  default-language: Haskell2010

executable owa
  main-is:             RunOWA.hs
  -- other-extensions:    
  build-depends:       base,
                       directory >= 1.2.5,
                       owa-core
  hs-source-dirs:      src/exe
  default-language:    Haskell2010

test-suite Version010Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion010Tests.hs
  hs-source-dirs:   tests,
                    tests/Version010Tests,
                    tests/Version010Tests/IntegrationTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 process,
                 parsec,
                 owa-core,
                 owa-objc,
                 owa-model,
                 owa-swift
  other-modules: AppDirectoryTests
               , FileSearchTests
               , IntegrationTestUtil
               , TestUtil
               , Version010IntegrationTests
  default-language: Haskell2010

test-suite Version015Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion015Tests.hs
  hs-source-dirs:   tests,
                    tests/Version015Tests,
                    tests/Version015Tests/StringsTests,
                    tests/Version015Tests/IntegrationTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 process,
                 parsec,
                 containers,
                 owa-core,
                 owa-model,
                 owa-parse,
                 owa-objc,
                 owa-swift
  other-modules: IntegrationTestUtil
               , StringsSearchTests
               , TestUtil
               , Version015IntegrationTests
  default-language: Haskell2010

test-suite Version020Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion020Tests.hs
  hs-source-dirs: tests,
                  tests/Version020Tests,
                  tests/Version020Tests/FileSearchTests,
                  tests/Version020Tests/IntegrationTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 process,
                 parsec,
                 containers,
                 owa-core,
                 owa-model,
                 owa-core,
                 owa-parse,
                 owa-objc,
                 owa-swift
  other-modules: IntegrationTestUtil
               , TestUtil
               , Version020IntegrationTests
               , ViewFileSearchTests
  default-language: Haskell2010

test-suite Version021Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion021Tests.hs
  hs-source-dirs: tests,
                  tests/Version021Tests,
                  tests/Version021Tests/CustomViewTests,
                  tests/Version021Tests/ContainerViewTests,
                  tests/Version021Tests/IntegrationTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 process,
                 parsec,
                 containers,
                 owa-core,
                 owa-model,
                 owa-parse,
                 owa-objc,
                 owa-swift
  other-modules: ContainerViewTests
               , CustomViewTests
               , IntegrationTestUtil
               , TestContainerViews
               , TestCustomViews
               , TestUtil
               , Version021IntegrationTests
  default-language: Haskell2010

test-suite Version023Tests
  ghc-options: -Wall
  default-extensions: OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: OWAVersion023Tests.hs
  hs-source-dirs: tests,
                  tests/Version023Tests,
                  tests/Version023Tests/LazyCodeTests,
                  tests/Version023Tests/CodeTypeTests,
                  tests/Version023Tests/AppInfoCLITests,
                  tests/Version023Tests/SwiftTests/SwiftColorTests,
                  tests/Version023Tests/SwiftTests/SwiftFontTests,
                  tests/Version023Tests/SwiftTests/SwiftAlertTests,
                  tests/Version023Tests/SwiftTests/SwiftErrorTests,
                  tests/Version023Tests/SwiftTests/SwiftViewTests,
                  tests/Version023Tests/IntegrationTests,
                  tests/Version023Tests/XCodeTests
  build-depends: base,
                 hspec     >= 1.8,
                 directory >= 1.2.5,
                 containers,
                 time,
                 parsec,
                 process,
                 mtl,
                 unix,
                 split,
                 owa-core,
                 owa-model,
                 owa-objc,
                 owa-swift
  other-modules: LazyCodeGenerationTests
               , SwiftAlertPrintTests
               , SwiftColorPrintTests
               , SwiftErrorPrintTests
               , SwiftFontPrintTests
               , SwiftSpecialTestViews
               , SwiftTestAlerts
               , SwiftTestColors
               , SwiftTestErrors
               , SwiftTestFonts
               , SwiftTestViews
               , SwiftViewPrintTests
               , CodeTypeTests
               , AppInfoCLITests
               , XCodeTests
               , TestUtil
               , IntegrationTestUtil
               , Version023IntegrationTests
  default-language: Haskell2010
